Thu Dec 20 18:05:32 2001  Steve Huston  <shuston@riverace.com>

        * examples/Shared_Malloc/test_persistence.cpp: Added a nothrow
          variant of operator new to work with ACE_HAS_NEW_NOTHROW platforms.

Thu Dec 20 15:04:52 2001  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_SOCK_Acceptor.h: Improved documentation. Changed
          "protocol_family" argument defaults from PF_INET to PF_UNSPEC
          to work correctly with IPv6 support.

Thu Dec 20 13:53:48 2001  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_SOCK_Acceptor.cpp:
        * ace/SSL/SSL_SOCK_Connector.cpp: Fixed compile errors on Win32.

Thu Dec 20 13:37:42 2001  Steve Huston  <shuston@riverace.com>

        * ace/config-all.h: Restructured the section for
          ACE_NEW_THROWS_EXCEPTIONS so that if ACE_HAS_NEW_NOTHROW is defined,
          the new(nothrow) version is used rather than setting up a try/catch.
          (Previously, this was only done for HP aC++). Also, check for
          __BORLANDC__ and set up the ACE_bad_alloc exception value properly.
          Thanks to Johnny Willemsen <jwillemsen@remedy.nl> for reporting
          this problem.

Thu Dec 20 11:43:29 2001  Steve Huston  <shuston@riverace.com>

        * tests/SSL: New directory for ACE_SSL tests.

        * tests/SSL/dummy.pem:
        * tests/SSL/key.pem:
        * tests/SSL/Makefile:
        * tests/SSL/Makefile.bor: Structure support for new tests.

        * tests/Thread_Pool_Reactor_SSL_Test.(h cpp): Tests the ACE_TP_Reactor
          with ACE_SSL wrappers. Thank you to Robert Handl
          <Robert.Handl@era.ericsson.se> for contributing this test.

        * tests/Makefile:
        * tests/Makefile.bor: Add SSL to build dirs if building with SSL.

        * THANKS: Added Robert Handl to the Hall of Fame.

Thu Dec 20 11:34:51 2001  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_SOCK_Acceptor.(h cpp i):
        * ace/SSL/SSL_SOCK_Connector.(h cpp i):	Series of changes: